# Assessment

./: README.md
Documentation/: Install_WSL_and_allow_communication_with_external_devices.html  Install_WSL_and_allow_communication_with_external_devices.md  QCar_ROS2_Quick_Start_Guide.md
Documentation/Week1/: Week1.md
Documentation/Week2/: Week2.md
ackermann_vehicle_bringup/launch/: gz_sim.launch.py
ackermann_vehicle_description/urdf/: mobile_base_gazebo.xacro
control_helpers_pkg/: setup.py
control_helpers_pkg/config/: lane_follower_q_params.yaml
control_helpers_pkg/control_helpers_pkg/: lane_follower_q.py  pose_calculator_mi.py  qcar2_joystick_controller.py
control_helpers_pkg/launch/: lane_follower_q.launch.py  qcar2_joy_control.launch.py
guns-n-roses/: CMakeLists.txt  package.xml  setup.cfg  setup.py
guns-n-roses/config/: sensor_params.yaml
guns-n-roses/guns-n-roses/: guns-n-roses.py
guns-n-roses/urdf/: qcar.gazebo.xacro  qcar_ros2.urdf.xacro
lidar_qcar/: package.xml  setup.cfg  setup.py
lidar_qcar/config/: lidar_view.rviz
lidar_qcar/launch/: lidar_visualizer.launch.py
lidar_qcar/lidar_qcar/: control_node.py  lidar_node.py
line_follower_real/: package.xml  setup.cfg  setup.py
line_follower_real/config/: lane_detector_real_params.yaml  lane_follower_real_params.yaml
line_follower_real/launch/: line_follower_real.launch.py
line_follower_real/line_follower_real/: image_relay.py
qcar_description/: CMakeLists.txt
qcar_description/rviz/: config.rviz
qcar_description/urdf/: qcar.materials.xacro  qcar_system.urdf.xacro
qcar_gazebo/: CMakeLists.txt
qcar_gazebo/config/: ego_params.yaml  gz_bridge.yaml  gz_ros2_control.yaml
qcar_gazebo/include/qcar_gazebo/: joystick_controller.hpp  vehicle_controller.hpp
qcar_gazebo/launch/: gz_multi_qcar.launch.py  gz_sim.launch.py  qcar2_mod_virtual_launch.py
qcar_gazebo/models/Oak tree/: model.sdf
qcar_gazebo/models/sign_board_stop/: model.sdf
qcar_gazebo/models/track/: model.config  model.sdf
qcar_gazebo/models/track/materials/scripts/: track.material
qcar_gazebo/models/track/meshes/: qcar_track.mtl
qcar_gazebo/models/wall_4_8x0_25/: model.config  model.sdf
qcar_gazebo/models/wall_4_8x0_25/materials/textures/: brick_wall.avif
qcar_gazebo/models/wall_4_8x0_25/meshes/: wood_wall_short.mtl
qcar_gazebo/models/wall_6_1x0_25/: model.config  model.sdf
qcar_gazebo/models/wall_6_1x0_25/meshes/: wood_wall_long.mtl
qcar_gazebo/src/: joystick_controller.cpp  vehicle_controller.cpp
qcar_gazebo/worlds/: stop_sign_cross_world.sdf  stop_test_world.sdf  test_world.sdf
vector3_teleop/: package.xml  setup.cfg  setup.py
vector3_teleop/vector3_teleop/: vector3_publisher.py
vision_helpers_pkg/: setup.py
vision_helpers_pkg/config/: lane_detector_params.yaml
vision_helpers_pkg/launch/: lane_detector.launch.py  qcar_image_decompressor.launch.py
vision_helpers_pkg/vision_helpers_pkg/: hough_polyfit_curves_demo.py  image_converter.py  image_processor.py  lane_detector.py  sliding_lane_datector.py
