<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>guns-n-roses</name>
  <version>0.0.0</version>
  <description>TF2 Examples</description>
  <maintainer email="a01737136@tec.mx">Paola Rojas</maintainer>
  <license>Apache-2.0</license>

  <depend>geometry_msgs</depend>
  <depend>numpy</depend>
  <depend>rclpy</depend>
  <depend>tf2_ros</depend>
  <depend>std_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>transforms3d</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
